--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -30,6 +30,16 @@ jobs:
           context: .
           tags: ${{secrets.ACR_NAME}}/csssh:latest
           push: true
+          secrets: |
+            LDAP_BIND_USER=${{ secrets.LDAP_BIND_USER }}
+            LDAP_BIND_PASSWORD=${{ secrets.LDAP_BIND_PASSWORD }}
+            DEFAULT_DOMAIN_SID=${{ secrets.DEFAULT_DOMAIN_SID }}
+            CSSSH_SSH_HOST_ECDSA_KEY=${{ secrets.CSSSH_SSH_HOST_ECDSA_KEY }}
+            CSSSH_SSH_HOST_ECDSA_KEY_PUB=${{ secrets.CSSSH_SSH_HOST_ECDSA_KEY_PUB }}
+            CSSSH_SSH_HOST_ED25519_KEY=${{ secrets.CSSSH_SSH_HOST_ED25519_KEY }}
+            CSSSH_SSH_HOST_ED25519_KEY_PUB=${{ secrets.CSSSH_SSH_HOST_ED25519_KEY_PUB }}
+            CSSSH_SSH_HOST_RSA_KEY=${{ secrets.CSSSH_SSH_HOST_RSA_KEY }}
+            CSSSH_SSH_HOST_RSA_KEY_PUB=${{ secrets.CSSSH_SSH_HOST_RSA_KEY_PUB }}
 
   deploy:
     runs-on: ubuntu-20.04
