--- a/kubernetes/csssh/templates/csssh.yaml
+++ b/kubernetes/csssh/templates/csssh.yaml
@@ -16,7 +16,15 @@ spec:
     metadata:
       labels:
         app: csssh-{{ default "staging" .Release.Namespace }}
+        {{ if ne .Release.Namespace "production" }}name: cs-ssh-{{ .Release.Namespace }}{{- else }}hostname: cs-ssh{{- end }}
     spec:
+      {{ if ne .Release.Namespace "production" }}hostname: cs-ssh-{{ .Release.Namespace }}{{- else }}hostname: cs-ssh{{- end }} 
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        searches:
+          - cs.calvin.edu
+          - k8s.cs.calvin.edu
+          - calvin.edu
       containers:
       - name: csssh-{{ default "staging" .Release.Namespace }}
         image: {{ .Values.image.registry }}/{{ .Values.image.name }}:{{ default "latest" .Values.image.tag }}
