update nfs locations

--- a/kubernetes/csssh/templates/csssh.yaml
+++ b/kubernetes/csssh/templates/csssh.yaml
@@ -31,8 +31,6 @@ spec:
         volumeMounts:
         - mountPath: /home
           name: mount0
-        #- mountPath: /webroot
-        #name: mount1
         - mountPath: /rprojects
           name: mount2
         - mountPath: /opt/R
@@ -49,14 +47,9 @@ spec:
         nfs:
           path: /export/home
           server: aznfs-int.cs.calvin.edu
-      #- name: mount1
-      #  nfs:
-      #    path: /export/csweb
-      #    server: aznfs-int.cs.calvin.edu
       - name: mount2
-        nfs:
-          path: /export/rprojects
-          server: r-int.cs.calvin.edu
+        persistentVolumeClaim:
+          claimName: pvc-cssshnfs-aznfs-rprojects-{{ default "staging" .Release.Namespace }}
       - name: mount3
         nfs:
           path: /export/r
