adjust autoscaling due to interactive logins

--- a/kubernetes/csssh/templates/csssh.yaml
+++ b/kubernetes/csssh/templates/csssh.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: csssh-{{ default "staging" .Release.Namespace }}
 spec:
-  {{ if ne .Release.Namespace "production" }}replicas: 1{{- else }}replicas: 3{{- end }}
+  {{ if ne .Release.Namespace "production" }}replicas: 1{{- else }}replicas: 2{{- end }}
   selector:
     matchLabels:
       app: csssh-{{ default "staging" .Release.Namespace }}
@@ -95,30 +95,30 @@ spec:
   selector:
     app: csssh-{{ default "staging" .Release.Namespace }}
 ---
-{{ if eq .Release.Namespace "production" }}
-apiVersion: autoscaling/v1
-kind: HorizontalPodAutoscaler
-metadata:
-  name: csssh-{{ default "staging" .Release.Namespace }}
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: csssh-{{ default "staging" .Release.Namespace }}
-  minReplicas: 1
-  maxReplicas: 4
-  targetCPUUtilizationPercentage: 90
-  #metrics:
-  #- type: Resource
-  #  resource:
-  #    name: cpu
-  #    target:
-  #      type: Utilization
-  #      averageUtilization: 80
-  #- type: Resource
-  #  resource:
-  #    name: memory
-  #    target:
-  #      type: Utilization
-  #      averageUtilization: 85
-{{- end }}
+# {{ if eq .Release.Namespace "production" }}
+# apiVersion: autoscaling/v1
+# kind: HorizontalPodAutoscaler
+# metadata:
+#   name: csssh-{{ default "staging" .Release.Namespace }}
+# spec:
+#   scaleTargetRef:
+#     apiVersion: apps/v1
+#     kind: Deployment
+#     name: csssh-{{ default "staging" .Release.Namespace }}
+#   minReplicas: 1
+#   maxReplicas: 4
+#   targetCPUUtilizationPercentage: 90
+#   #metrics:
+#   #- type: Resource
+#   #  resource:
+#   #    name: cpu
+#   #    target:
+#   #      type: Utilization
+#   #      averageUtilization: 80
+#   #- type: Resource
+#   #  resource:
+#   #    name: memory
+#   #    target:
+#   #      type: Utilization
+#   #      averageUtilization: 85
+# {{- end }}
